--- a/coursephotozen/main/templates/main/layout.html
+++ b/coursephotozen/main/templates/main/layout.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <aside>
-        <img src="{% static 'main/img/photo.jpg' %}" alt="Логотип с фотоаппаратом">
+        <img src="{% static 'main/img/photo.png' %}" alt="Логотип с фотоаппаратом">
         <span class="logo">PhotoZEN</span>
         <h7 class="devise">Стань профессионалом</h7>
         <ul>
