--- a/coursephotozen/main/templates/main/index.html
+++ b/coursephotozen/main/templates/main/index.html
@@ -1,11 +1,18 @@
 {% extends 'main/layout.html' %}
 
-{% block title %}Главная страница{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
     <div class="features">
+        <h2>{{ title }}</h2> 
         <h1>Добро пожаловать в мир фотографии!</h1>
         <button class="btn btn-warning">ЗАПИСАТЬСЯ НА КУРС</button>
+
+        {% for el in values %}
+            <p>{{ el }}</p>
+        {% endfor %}
+
+        {{ obj.age }}
     </div>
     {% include 'main/test.html' %}
 {% endblock %}
