--- a/coursephotozen/main/templates/main/layout.html
+++ b/coursephotozen/main/templates/main/layout.html
@@ -14,8 +14,8 @@
         <span class="logo">PhotoZEN</span>
         <h7 class="devise">Стань профессионалом</h7>
         <ul>
-            <a href="{% url 'home' %}"><li>Главная</li></a>
-            <a href="{% url 'course' %}"><li>Пройти курс</li></a>
+            <a href="{% url 'index' %}"><li>Главная</li></a>
+            <a href="{% url 'home' %}"><li>Пройти курс</li></a>
             <a href="{% url 'contact' %}"><li>Контакты</li></a>
         </ul>
     </aside>
